Quelques fix... (Galeries)

--- a/templates/gallery/gallery/list.html
+++ b/templates/gallery/gallery/list.html
@@ -45,7 +45,7 @@
             {% endfor %}
         </div>
 
-        <button type="submit" name="delete_multi">Supprimer la séléction</button>
+        <button type="submit" name="delete_multi" class="btn btn-cancel">Supprimer la séléction</button>
 
         {% csrf_token %}
     </form>
