--- a/assets/scss/_form.scss
+++ b/assets/scss/_form.scss
@@ -201,4 +201,8 @@
             margin-top: 8px;
         }
     }
+    .controls .radio {
+        padding-top: 3px;
+        padding-bottom: 0;
+    }
 }
