--- a/templates/forum/index.html
+++ b/templates/forum/index.html
@@ -37,7 +37,7 @@
         proposer des exercices au reste de la communauté.
     </p>
 
-    <div class="content-wrapper topic-list forum-list navigable-list">
+    <div class="content-wrapper topic-list topic-list-small forum-list navigable-list">
         {% for category in categories %}
             <h3 class="group-title content-wrapper">
                 {{ category.title }}
