--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -2473,8 +2473,6 @@ form.topic-message {
 
             margin: 10px;
 
-            box-shadow: 1px 2px 2px rgba(0,0,0,0.1);
-
             .gallery-checkbox {
                 position: absolute;
                 top: 5px;
@@ -2577,7 +2575,7 @@ form.topic-message {
             .gallery-checkbox {
                 float: left;
                 line-height: 100%;
-                padding: (($gallery-image-size - 15px) / 2) 0;
+                padding: 32px 0 32px 10px;
             }
 
             .gallery-image {
@@ -2651,7 +2649,7 @@ form.topic-message {
 }
 
 .toggle-gallery-view {
-    float: left!important;
+    float: left !important;
 }
 
 
