--- a/templates/gallery/gallery/details.html
+++ b/templates/gallery/gallery/details.html
@@ -65,36 +65,38 @@
         </ul>
     </div>
     
-    <form id="form" name="form" method="POST" action="{% url "zds.gallery.views.modify_image" %}">
+    <form id="form" name="form" method="post" action="{% url "zds.gallery.views.modify_image" %}">
         <input type="hidden" name="gallery" value="{{ gallery.pk }}">
         <button class="btn btn-cancel" name="delete_multi">Supprimer la sélection</button>
-        <button class="toggle-gallery-view btn btn-grey" type="button"></button>
+        <button class="toggle-gallery-view btn btn-grey" type="button" title="Alterner entre les modes de vue grille et liste">
+            Vue grille
+        </button>
 
         <div class="gallery list-view navigable-list">
             {% for img in gallery.get_images %}
-            <div class="gallery-item navigable-elem">
-                <a href="{% url "zds.gallery.views.edit_image" gallery.pk img.pk %}" class="navigable-link">
+                <div class="gallery-item navigable-elem">
                     <div class="gallery-checkbox">
-                        <input name="items" type="checkbox" value="{{ img.pk }}" />
+                        <input name="items" type="checkbox" value="{{ img.pk }}">
                     </div>
-                    <div class="gallery-image">
-                        <img src="{{ img.physical.url }}"
-                             data-caption="{{ img.title }}"
-                             alt="{{ img.title }}">
-                    </div>
-                    <div class="gallery-caption">
-                        <div class="title">{{ img.title }}</div>
-                        <div class="legend">{{ img.legend }}</div>
-                    </div>
-                </a>
-            </div>
-            {% empty %}
-            <div class="gallery-item no-images">
-                <div class="gallery-caption">
-                    <div class="title">Aucune images</div>
-                    <div class="legend">Cliquez sur "Ajouter une image" pour en ajouter</div>
+                    <a href="{% url "zds.gallery.views.edit_image" gallery.pk img.pk %}" class="navigable-link">
+                        <div class="gallery-image">
+                            <img src="{{ img.physical.url }}"
+                                 data-caption="{{ img.title }}"
+                                 alt="{{ img.title }}">
+                        </div>
+                        <div class="gallery-caption">
+                            <div class="title">{{ img.title }}</div>
+                            <div class="legend">{{ img.legend }}</div>
+                        </div>
+                    </a>
                 </div>
-            </div>
+                {% empty %}
+                <div class="gallery-item no-images">
+                    <div class="gallery-caption">
+                        <div class="title">Aucune images</div>
+                        <div class="legend">Cliquez sur "Ajouter une image" pour en ajouter</div>
+                    </div>
+                </div>
             {% endfor %}
 
             <div class="gallery-item add-image">
