--- a/templates/gallery/gallery/list.html
+++ b/templates/gallery/gallery/list.html
@@ -36,7 +36,7 @@
                         >
                     </div>
                     <div class="topic-description">
-                        <a href="{{ gallery.gallery.get_absolute_url }}" class="title navigable-link">
+                        <a href="{{ gallery.gallery.get_absolute_url }}" class="topic-title-link navigable-link">
                             <span class="topic-title">
                                 {{ gallery.gallery.title }}
                             </span>
