Fix #846 - Ajout d'un "max-width: 100%" aux images qui ne sont pas dans des figures

--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -1593,6 +1593,10 @@
             background: #EEE;
         }
 
+        img {
+            max-width: 100%;
+        }
+
         figure {
             margin: 0;
             text-align: center;
