--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 {% load topbar %}
 {% load captureas %}
 {% load date %}
+{% load set %}
 
 
 
@@ -214,14 +215,17 @@
                                             <span class="dropdown-title">Messagerie privée</span>
                                             <ul class="dropdown-list">
                                                 {% for topic in unread_topics %}
-                                                    {% with first_unread=topic.first_unread_post %}
+                                                    {% with first_unread=topic.first_unread_post  last_answer=topic.get_last_answer %}
                                                     <li>
+                                                        {% if not last_answer %}
+                                                            {% set topic.first_post as last_answser %}
+                                                        {% endif %}
                                                         <a href="{{ topic.last_read_post.get_absolute_url }}">
-                                                            {% with p=first_unread.author|profile %}
+                                                            {% with p=last_answer.author|profile %}
                                                                 <img src="{{ p.get_avatar_url }}" alt="" class="avatar">
                                                             {% endwith %}
-                                                            <span class="username">{{ first_unread.author.username }}</span>
-                                                            <span class="date">{{ first_unread.pubdate|format_date:True|capfirst }}</span>
+                                                            <span class="username">{{ last_answer.author.username }}</span>
+                                                            <span class="date">{{ last_answer.pubdate|format_date:True|capfirst }}</span>
                                                             <span class="topic">{{ topic.title }}</span>
                                                         </a>
                                                     </li>
@@ -229,25 +233,21 @@
                                                 {% endfor %}
 
                                                 {% for topic in read_topics %}
-                                                    {% with last_read=topic.last_read_post %}
+                                                    {% with last_read=topic.last_read_post last_answer=topic.get_last_answer %}
                                                     <li>
-                                                        {% with last_answer=topic.get_last_answer %}
-                                                        <a href="
-                                                            {% if last_answer %}
-                                                                {{ last_answer.get_absolute_url }}
-                                                            {% else %}
-                                                                {{ topic.first_post.get_absolute_url }}
-                                                            {% endif %}"
+                                                        {% if not last_answer %}
+                                                            {% set topic.first_post as last_answser %}
+                                                        {% endif %}
+                                                        <a href="{{ last_answer.get_absolute_url }}"
                                                            class="read"
                                                         >
-                                                            {% with p=last_read.author|profile %}
+                                                            {% with p=last_answer.author|profile %}
                                                                 <img src="{{ p.get_avatar_url }}" alt="" class="avatar">
                                                             {% endwith %}
-                                                            <span class="username">{{ last_read.author.username }}</span>
-                                                            <span class="date">{{ last_read.pubdate|format_date:True|capfirst }}</span>
+                                                            <span class="username">{{ last_answer.author.username }}</span>
+                                                            <span class="date">{{ last_answer.pubdate|format_date:True|capfirst }}</span>
                                                             <span class="topic">{{ topic.title }}</span>
                                                         </a>
-                                                        {% endwith %}
                                                     </li>
                                                     {% endwith %}
                                                 {% endfor %}
